--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "blocker-detector",
-  "version": "1.0.0",
-  "description": "blocker-detector React component",
+  "version": "1.0.23",
+  "description": "Adblock and Ublock detector",
+  "repository": "git@github.com:weban/blocker-detector.git",
+  "author": "weban",
+  "license": "MIT",
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
@@ -14,25 +17,21 @@
     "build": "nwb build-react-component",
     "clean": "nwb clean-module && nwb clean-demo",
     "prepublishOnly": "npm run build",
-    "start": "nwb serve-react-demo",
-    "test": "nwb test-react",
-    "test:coverage": "nwb test-react --coverage",
-    "test:watch": "nwb test-react --server"
+    "start": "nwb serve-react-demo"
   },
   "dependencies": {},
   "peerDependencies": {
-    "react": "16.x"
+    "react": "17.x"
   },
   "devDependencies": {
     "nwb": "0.25.x",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
-  "author": "",
-  "homepage": "",
-  "license": "MIT",
-  "repository": "",
   "keywords": [
-    "react-component"
+    "react-component",
+    "adblock",
+    "ublock",
+    "blocker"
   ]
 }
