--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blocker-detector",
-  "version": "1.1.0",
+  "version": "1.1.33",
   "description": "Adblock and Ublock detector",
   "repository": "git@github.com:weban/blocker-detector.git",
   "author": "weban",
@@ -15,18 +15,31 @@
   ],
   "scripts": {
     "build": "nwb build-react-component",
+    "build:ts": "tsc",
+    "build:all": "npm-run-all copy:css-to-lib build:ts",
     "clean": "nwb clean-module && nwb clean-demo",
-    "prepublishOnly": "npm run build",
-    "start": "nwb serve-react-demo"
+    "prepublishOnly": "npm run build:ts&&npm run build&&npm run build",
+    "start": "nwb serve-react-demo",
+    "test": "nwb test-react",
+    "test:coverage": "nwb test-react --coverage",
+    "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@types/jest": "^26.0.18",
+    "@types/node": "^14.14.11",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "awesome-typescript-loader": "^5.2.1"
+  },
   "peerDependencies": {
     "react": "17.x"
   },
   "devDependencies": {
     "nwb": "0.25.x",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "ts-loader": "4.0.0",
+    "typescript": "^4.1.2"
   },
   "keywords": [
     "react-component",
